--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img src="./img/Logo_etna.png" alt="Logo" id="topLeftImage">
         </a>
         <a href="https://www.google.com/" target="_blank" class="absolute top-4 right-4 z-30 glow-on-hover">
-            <img src="./img/Logo_etna.png" alt="Logo" id="topBottomImage"> 
+            <img src="./img/Scritta_vera_finale.png" alt="Logo" id="topBottomImage"> 
         </a>
         <div id="mainPosterContainer" class="relative w-full h-full max-w-full max-h-full rounded-lg shadow-2xl flex flex-col items-center justify-center">
             <img src="./img/etna_pre_invito.png" alt="Anteprima Locandina" id="centerImage" class="w-full max-w-xs sm:max-w-sm md:max-w-md h-auto object-contain mb-8 rounded-lg image-glow">
