--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
     </div>
 
     <div id="locandina" class="absolute inset-0 bg-black flex items-center justify-center p-2 opacity-0 transition-opacity duration-700 ease-in-out">
-        <a href="https://cantineflorio.it/" target="_blank" class="absolute top-4 left-4 z-30 glow-on-hover">
+        <a href="https://consorzioetnadoc.com/it/" target="_blank" class="absolute top-4 left-4 z-30 glow-on-hover">
             <img src="./img/Logo_etna.png" alt="Logo" id="topLeftImage">
         </a>
-        <a href="https://cantineflorio.it/" target="_blank" class="absolute top-4 right-4 z-30 glow-on-hover">
+        <a href="https://granviasc.com" target="_blank" class="absolute top-4 right-4 z-30 glow-on-hover">
             <img src="./img/Scritta_vera_finale.png" alt="Logo" id="topBottomImage"> 
         </a>
         <div id="mainPosterContainer" class="relative w-full h-full max-w-full max-h-full rounded-lg shadow-2xl flex flex-col items-center justify-center">
             <img src="./img/etna_pre_invito.png" alt="Anteprima Locandina" id="centerImage" class="w-full max-w-xs sm:max-w-sm md:max-w-md h-auto object-contain mb-8 rounded-lg image-glow">
             
-            <a href="https://cantineflorio.it/" target="_blank" class="block glow-on-hover"> 
+            <a href="https://www.ilpiccioloetnagolfresort.com/it-IT" target="_blank" class="block glow-on-hover"> 
                 <img src="./img/scritta_sotto.png" alt="Testo in basso" id="SuperBottomImage" class="h-auto object-contain mb-8 rounded-lg">
             </a>
 
